# gtirb-stack-stamp

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .stack-stamp.tex  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  gtirb-stack-stamp.asd  gtirb-stack-stamp.lisp  setup.py
.ci/: Dockerfile  Dockerfile.build  Dockerfile.formatter  Dockerfile.rewriting  gitlab-ci.yaml
doc/: README.md
gtirb_stack_stamp/: __init__.py  __main__.py  function.py  rewriting.py  stack_stamp.py
include/gtirb_stack_stamp/: gtirb_stack_stamp.hpp
src/: CMakeLists.txt  gtirb_stack_stamp.cpp
src/driver/: CMakeLists.txt  driver.cpp  main.cpp
test/: test_stack_stamp.py
tests/: CMakeLists.txt  Makefile  cl-nop-rewrite  cl-stack-stamp-rewrite  factorial.c  stack-overwrite.c  test_stack_stamp.cpp  test_stack_stamp.py
